Archive2/d3/867181d9500752/output
main.cpp: In function 'int main()':
main.cpp:3:18: error: 'const' qualifiers cannot be applied to 'const int&'
 const int &const ri = i;
                  ^
main.cpp:3:18: warning: unused variable 'ri' [-Wunused-variable]
