Archive2/d3/867181d9500752/main.cpp
int main() {
    int i = 42;
const int &const ri = i;

}